--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "portfolio",
   "version": "1.0.0",
   "description": "A website to display my best projects",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/jjmakesthings/portfolio/issues"
   },
-  "homepage": "https://github.com/jjmakesthings/portfolio#readme"
+  "homepage": "https://github.com/jjmakesthings/portfolio#readme",
+  "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "babel-loader": "^8.2.3",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
+  }
 }
