--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A website to display my best projects",
   "private": true,
+  "homepage": "https://jjshepard.com",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
@@ -18,7 +19,6 @@
   "bugs": {
     "url": "https://github.com/jjmakesthings/portfolio/issues"
   },
-  "homepage": "https://github.com/jjmakesthings/portfolio#readme",
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
